...
  String get haveAccount => 'Already have an account?';

  @override
  String get enterEmail => 'Please enter your email';

  @override
  String get enterValidEmail => 'Please enter a valid email';

  @override
  String get enterPassword => 'Please enter your password';

  @override
  String get passwordMinLength => 'Password must be at least 6 characters';

  @override
  String get enterUsername => 'Please enter a username';

  @override
  String get usernameMinLength => 'Username must be at least 3 characters';
...
